@@ -6,3 +6,6 @@ _start:
 	SETD	[A0.0+A0.1],A0.2
 	ASL	D0.0,D1.0,D0.0
 	GETD	D0.0,[D0.0--D0.0]
+	SWAP	PC,PCX
+	SWAP	CT.0,PCX
+	SWAP	D0.1,D0.2
